pw_rpc: Work around bug in GCC 8

This works around a GCC bug that was fixed in GCC 9
(https://gcc.gnu.org/bugzilla/show_bug.cgi?id=86678). GCC 8 incorrectly
reports a "call to non-'constexpr' function" error in some valid
constexpr functions.

Change-Id: Iab1fda0c6fcf5ca7e428899523fc51f8acb42876
Reviewed-on: https://pigweed-review.googlesource.com/c/pigweed/pigweed/+/85900
Pigweed-Auto-Submit: Wyatt Hepler <hepler@google.com>
Reviewed-by: Alexei Frolov <frolv@google.com>
Commit-Queue: Auto-Submit <auto-submit@pigweed.google.com.iam.gserviceaccount.com>