pw_rpc/public/pw_rpc/payloads_view.h
@@ -178,7 +178,13 @@ class PayloadsView {
       case MethodType::kBidirectionalStreaming:
         return {PacketType::CLIENT_STREAM, PacketType::SERVER_STREAM};
     }
+
+// Workaround for GCC 8 bug: https://gcc.gnu.org/bugzilla/show_bug.cgi?id=86678
+#if defined(__GNUC__) && __GNUC__ < 9
+    return {};
+#else
     PW_ASSERT(false);
+#endif  // defined(__GNUC__) && __GNUC__ < 9
   }
 
   internal::test::PacketsView view_;
